# logc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: ansi_colors.h  logc.c  logc.h
tests/: CMakeLists.txt  main.c
